--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "@mykola",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^1.3.12",
     "color-thief": "^2.2.1",
     "request": "^2.69.0",
     "twit": "^2.2.2"
